# robonomics-wiki-deprecation-notifier

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: add-release.yml  scheduled_run.yml
src/: .env  deprecation-notifier-db.sqlite  main.py
src/wiki_deprecation_notifier/: __init__.py  _conflict_resolver.py  _dependency_mapping.py  _utils.py
src/wiki_deprecation_notifier/db_wrapper/: _sql_stetments.py  db.py
src/wiki_deprecation_notifier/gihub_api_wrapper/: FileDescriptor.py  api_wrappers.py  client_settings.py  utils.py
src/wiki_deprecation_notifier/wiki_parser/: Article.py  DeprecationConflict.py  GithubAccount.py  Issue.py  Release.py  Repo.py  _issue_generation.py  dependency_extractor.py  front_matter_parser.py  issue_generation.py
